 ** (r360) If a meta icon is directly checking another meta icon, and the meta icon being checked changes the icon that is is checking, the meta icon checking the other meta icon should now properly update its inherited settings.
 ** (r365) Buff/Debuff icons tracking the "Enrage" dispel type only should now always show the correct texture in configuration.
 
===v4.7.2===
 * New Icon Type: Lightwell
 * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)
 * You can now output text to the raid warning frame without actually sending a raid warning to your raid.
 * You can now export icons to an entire raid or your entire guild by typing "RAID" or "GUILD" as the name to export to.
 * Meta icons can now sort their components based on their current duration.
 * Added an option to color the border of Masque skins with the coloring applied to icons. This setting can be found under the *Global Colors* config in TMW's main options.
 * Bug Fixes:
 ** (r344) Temporary fix (I hope) for the bug where OmniCC timers would randomly stop after a timer was refreshed.
 ** (r345) TellMeWhen.lua:1467 table index is nil
 ** (r346) The suggestion list for weapon enchants should once again function properly.

===v4.7.1===
 * Bug Fixes:
 ** (r342) Condition icons will no longer spam their event outputs when "Only show if timer is active" is enabled.
 
===v4.7.0===
 * Completely redid the color system. Colors are now defined (in the main optons) globally, with the option to configure them per icon type and override the global settings.
 * Addded "%p" as a substitution for the name of the previously checked unit.
 * Unit substitutions can be used as the destination for a whisper text output.
 * You can right-click-drag icons anywhere on screen to anchor them to any mouse enabled frame, or to move an icon into a new group.
 * Added a setting to disable new version warnings.
 * It is now easier to delete old groups.